@@ -98,16 +98,26 @@
                     empty: {'value': -1, 'label': _T("Select")}
                 } %}
             </div>
-                <div class="ui right aligned basic fitted segment field flexend">
-                    <button type="submit"  class="tooltip ui labeled icon primary button" title="{{ _T("Apply filters") }}" name="filter">
-                        <i class="search icon" aria-hidden="true"></i>
-                        {{ _T("Filter") }}
-                    </button>
-                    <button type="submit" id="clear_filter" name="clear_filter" class="tooltip ui labeled icon button" title="{{ _T("Reset all filters to defaults") }}">
-                        <i class="trash alt red icon" aria-hidden="true"></i>
-                        {{ _T("Clear filter") }}
-                    </button>
+            <div class="field">
+                <label for="contrib_type_filter">{{ _T("Contribution type:") }}</label>
+                <select name="contrib_type_filter" class="ui search dropdown">
+                    <option value="0">{{ _T('Select') }}</option>
+                    {% for key, values in type_cotis_options %}
+                        <option value="{{ key }}"{% if key == filters.contrib_type_filter %} selected="selected"{% endif %}>{{ values.label }}</option>
+                    {% endfor %}
+                </select>
             </div>
+        </div>
+
+        <div class="ui right aligned basic fitted segment field flexend">
+            <button type="submit"  class="tooltip ui labeled icon primary button" title="{{ _T("Apply filters") }}" name="filter">
+                <i class="search icon" aria-hidden="true"></i>
+                {{ _T("Filter") }}
+            </button>
+            <button type="submit" id="clear_filter" name="clear_filter" class="tooltip ui labeled icon button" title="{{ _T("Reset all filters to defaults") }}">
+                <i class="trash alt red icon" aria-hidden="true"></i>
+                {{ _T("Clear filter") }}
+            </button>
         </div>
     </div>
     {% if member is defined and mode != 'ajax' %}
